# Postgresql-fastAPI-vue-stack-demo

./: .gitignore  LICENSE.md  README.md  db.py  docker-compose.yml  main.py  pyproject.toml  resources.md
.github/workflows/: lint.yml
api/: router.py
api/routes/: __init__.py  todos.py
api/utils/: dependencies.py
compose/local/api/: Dockerfile
core/: config.py  utils.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/composables/: useApi.ts
frontend/src/router/: index.ts
frontend/src/views/: Todos.vue
migrations/: env.py
migrations/versions/: 2cbace09e5eb_init_todo.py  9065b41b3dfe_init_todo_table.py  b49729fd6c4d_test.py
models/: base.py  todo.py
repositories/: base.py  todo.py
schemas/: todo.py
scripts/: format  lint  lint-fix  makemigrations  migrate
